Fixed vertical white space bug

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -81,6 +81,10 @@ button {
   --crete: "Crete Round", sans-serif;
 }
 
+.home {
+  position: relative;
+}
+
 /* ====== GLOBAL VARIABLES END ==== */
 
 /* ====== HEADER START ==== */
@@ -183,7 +187,6 @@ header .my-logo {
 
   .nav-list {
     color: var(--white);
-    padding: 2em 1em;
     font-weight: 400;
     font-size: 1rem;
     margin-bottom: 0;
@@ -601,7 +604,7 @@ hgroup h2 {
   color: var(--black);
   width: 95%;
   margin: 0.5em auto;
-  padding: 3em 2em;
+  padding: 3em 1em;
 }
 
 .contact-form h2 {
@@ -611,26 +614,26 @@ hgroup h2 {
   margin-bottom: 1em;
 }
 
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
 .contact-form .form-list {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 85%;
   margin: 2em auto;
 }
 
-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .form-items {
-  width: 100%;
   display: flex;
   flex-direction: column;
   margin: 0.5em auto;
+  width: 100%;
 }
 
 .form-items input {
@@ -640,6 +643,7 @@ form {
 }
 
 .form-items textarea {
+  width: 100%;
   padding: 1em 0.5em;
   border: 0;
   background: #fbf8f7;
@@ -699,6 +703,7 @@ footer {
     justify-content: space-between;
     align-items: flex-start;
     margin-top: 0;
+    width: 85%;
   }
 
   .social-icons {
